[gd_scene load_steps=8 format=3 uid="uid://c5hks0yvn11s4"]

[ext_resource type="Theme" uid="uid://drays61pfu7xc" path="res://lessons/main_theme.tres" id="1_offqj"]
[ext_resource type="Script" uid="uid://057m1a3ct0n5" path="res://lessons/expressions.gd" id="2_uassf"]
[ext_resource type="Shader" uid="uid://cs15e2hgd2lan" path="res://assets/sliding_background.gdshader" id="3_2l66d"]
[ext_resource type="Texture2D" uid="uid://bnly1gkbxw6b5" path="res://assets/bubble_pattern.png" id="4_8poul"]
[ext_resource type="Texture2D" uid="uid://copkt78vgp37i" path="res://assets/sophia.png" id="5_8k2r0"]
[ext_resource type="Texture2D" uid="uid://d000xjtr4iqtk" path="res://assets/emotion_regular.png" id="6_mv62c"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xvgdd"]
shader = ExtResource("3_2l66d")
shader_parameter/pattern_sampler = ExtResource("4_8poul")
shader_parameter/bg_color = Color(1, 1, 0.627451, 1)
shader_parameter/pattern_color = Color(1, 0.9019608, 0.5294118, 1)
shader_parameter/pattern_size = 192.0

[node name="Expressions" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_offqj")
script = ExtResource("2_uassf")

[node name="Background" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_xvgdd")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Body" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_8k2r0")
expand_mode = 1
stretch_mode = 5

[node name="Expression" type="TextureRect" parent="Body"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 51.0
offset_top = 62.0
offset_right = -56.0
offset_bottom = -29.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_mv62c")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_left = 32.0
offset_top = 27.0
offset_right = 466.0
offset_bottom = 177.0
metadata/_edit_group_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonSophia" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Sophia"

[node name="ButtonPink" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Pink"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonRegular" type="Button" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Regular"

[node name="ButtonSad" type="Button" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Sad"

[node name="ButtonHappy" type="Button" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Happy"
